--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.75.1",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.553.0",
     "next": "15.5.6",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
