--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@supabase/supabase-js": "^2.75.1",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.553.0",
     "next": "15.5.6",
     "qrcode.react": "^4.2.0",
